# Oracle-voice-paji

./: CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: MISSION-01-SETUP.md  blog-dmg-polish.md
scripts/: agent-voices.toml  polish-dmg.sh  voice-tray-mqtt-notify.sh  voice-tray-notify.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  mqtt.rs  tray.rs  watcher.rs
ψ/memory/retrospectives/2026-01/05/: 20.15_mqtt-status-testing.md  20.30_mqtt-settings-complete.md
