[package]
name = "voice-tray-v2"
version = "0.2.0"
description = "Central Voice System v2 - MQTT + HTTP backend"
authors = ["Nat"]
edition = "2021"

[lib]
name = "voice_tray_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rumqttc = "0.24"
image = "0.25"
